--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="{% static 'global/css/style.css' %} ">
 </head>
 <body>
-    <h1>Qualquer</h1>
+    <header class="header">
+        <h1 class="header-heading">
+            <a class="header-link" href="{% url "contact:index" %}">
+                Agenda
+            </a>
+        </h1>
+
+        <nav class="menu">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="" class="menu-link">
+                        Link1
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="" class="menu-link">
+                        Link2
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+
+    </header>
+
+    <main class="content">
+    {% block content %}{% endblock content %}
+    </main>
 </body>
 </html>
