--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,11 +4,11 @@
     {% include "global/partials/_head.html" %}
   </head>
   <body>
-    {% include "global/partials/_header.html" %}
-
+    {% include "global/partials/_header.html" %} {% include
+    "global/partials/_messages.html" %}
     <main class="content">
-      {% block content %}{% endblock content %}
-      {% include "global/partials/_pagination.html" %}
+      {% block content %}{% endblock content %} {% include
+      "global/partials/_pagination.html" %}
     </main>
   </body>
 </html>
